# CS350_2022

./: .gitignore  README.md
cs350_ass1/: CMakeLists.txt  CMakeSettings.json
cs350_ass1/demo/: CMakeLists.txt  demo_renderer.cpp
cs350_ass1/src/: CMakeLists.txt  InputManager.cpp  InputManager.hpp  camera.cpp  camera.hpp  debug_system.cpp  debug_system.hpp  primitive.cpp  primitive.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
cs350_ass1/test/: CMakeLists.txt  common.hpp  debug_draw.cpp
